2001-09-05  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NSImpl.java:
	Remove debug printlns.

	* org/cougaar/core/naming/NamingDirContext.java:
	Remove debug printlns.

	* org/cougaar/core/naming/NSLS.java:
	Print attributes of naming service entries, too.

2001-08-30  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/domain/planning/ldm/DeletionPlugIn.java:
	Add optional parameters for archivingenabled and debug.
	Expect and handle exceptions when asking for start time or end
	time of tasks. An exception is thrown if the task has no such
	preference.

2001-08-27  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NamingContext.java:
	Fix bug in getNameInNamespace for root directory.

2001-08-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NamingDirContext.java:
	Remove unbind override. Nothing special needs to be done about
	attributes. The go away when the binding goes away.

	* org/cougaar/core/naming/NamingContext.java:
	Remove extraneous slashs from names returned by
	getNameInNamespace(). Fix unbind so it unbinds contexts, but only
	if called from destroySubcontext. The guts of unbind are now a
	subroutine called from both unbind and destroySubcontext. A
	boolean argument says whether contexts can be destroyed or not.

	* org/cougaar/core/naming/SearchStringParser.java:
	Fix bug caused by treating space as separator. Spaces are ignored
	between what are otherwise tokens, but to not separate tokens nor
	are they tokens themselves.

2001-08-24  Lora Goldston  <lgoldsto@bbn.com>

	* org/cougaar/core/util/DBConnectionPool.java
	Added supportsTransactions check before calling commit.  Only
	call commit if the database supports transactions.  Some 
	non-transactional database drivers are throwing exceptions when 
	commit is called with true.

2001-08-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NamingDirContext.java:
	Finish fixing the toString(StringBuffer) method.
