@@ -23,6 +23,7 @@ package org.cougaar.core.agent;
 import java.util.*;
 import org.cougaar.util.*;
 import org.cougaar.core.component.*;
+import org.cougaar.core.agent.Agent;
 
 /** An Agent's view of its parent component (Container).
  *
@@ -31,6 +32,8 @@ public interface AgentBindingSite
   extends BindingSite
 {
   String getName();
+  void registerAgent(Agent agent);
+
 }
 
 
